--- a/app/about/about.module.css
+++ b/app/about/about.module.css
@@ -2,6 +2,7 @@
     height: 10vh;
     text-align: center;
     background-color: rgb(45, 12, 75);
+    
 }
 .Wallpaper {
     position: absolute; /* Permite que o GIF fique em segundo plano */
@@ -36,4 +37,8 @@
     height: auto;
     border-radius: 8px;
     object-fit: cover; /* Ajusta a imagem para preencher o contêiner */
+}
+
+.texto {
+    color: gray;
 }
