--- a/app/gallery/gallery.module.css
+++ b/app/gallery/gallery.module.css
@@ -18,7 +18,7 @@
 
 .Subtitle {
     font-size: 1.5rem;
-    color: #666;
+    color: black;
     text-align: center;
 }
 
@@ -36,7 +36,7 @@
 
 .Image {
     width: 100%;
-    height: auto;
+    height: 100%;
     border-radius: 8px;
     object-fit: cover; /* Ajusta a imagem para preencher o contêiner */
 }
